deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sta-deployment
  labels:
    app: sta
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: sta
  template:
    metadata:
      labels:
        app: sta
    spec:
      containers:
      - name: sta-container
        image: yolomurphy/test:${IMAGE_TAG}
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcredsta
---
apiVersion: v1
kind: Service
metadata:
  name: sta-service
  labels:
    app: sta
spec:
  selector:
    app: sta  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80  
  type: ClusterIP
